block header methods implemented

--- a/Assignment1/Project/CMakeLists.txt
+++ b/Assignment1/Project/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Project main.cpp)
+add_executable(Project main.cpp DatabaseFileIO.cpp DatabaseFileIO.h)
