add dir for b tree

--- a/Assignment1/Project/Google_tests/CMakeLists.txt
+++ b/Assignment1/Project/Google_tests/CMakeLists.txt
@@ -6,11 +6,13 @@ include_directories(lib/googletest-main/googletest/include)
 include_directories(lib/googletest-main/googlemock/include)
 include_directories(../Database_lib)
 include_directories(../DateConverter_lib/)
+include_directories(../BPlusTree_lib/)
 
 # adding the Google_Tests_run target
-add_executable(Google_tests test1.cpp)
+add_executable(Google_tests test1.cpp RecordTests.cpp BPlusTreeTests.cpp)
 
 # linking Google_Tests_run with DateConverter_lib which will be tested
 target_link_libraries(Google_tests DateConverter_libxxx)
 target_link_libraries(Google_tests Database_lib)
+target_link_libraries(Google_tests BPlusTree_lib)
 target_link_libraries(Google_tests gtest gtest_main)
