--- a/Assignment1/Project/Database_lib/CMakeLists.txt
+++ b/Assignment1/Project/Database_lib/CMakeLists.txt
@@ -3,11 +3,12 @@ project(Database_lib)
 set(HEADER_FILES
         DatabaseFileIO.h
         RawDataParse.h
+        FinalPrintOut.h
         )
 
 set(SOURCE_FILES
         DatabaseFileIO.cpp
         RawDataParse.cpp
-        )
+        FinalPrintOut.cpp)
 
 add_library(Database_lib STATIC ${SOURCE_FILES} ${HEADER_FILES})
