hashtable insert works for samples from class

--- a/Assignment1/Question2/Utility/CMakeLists.txt
+++ b/Assignment1/Question2/Utility/CMakeLists.txt
@@ -2,10 +2,11 @@ project(Utility_lib)
 
 set(HEADER_FILES
         BytesOperation.h
-        Record.cpp Record.h BlockListNode.cpp BlockListNode.h)
+         Record.h
+        BlockListNode.h)
 
 set(SOURCE_FILES
         BytesOperation.cpp
-        Record.cpp Record.h BlockListNode.cpp BlockListNode.h)
+        Record.cpp BlockListNode.cpp)
 
-add_library(Utility_lib STATIC ${SOURCE_FILES} ${HEADER_FILES} Record.cpp Record.h BlockListNode.cpp BlockListNode.h)
+add_library(Utility_lib STATIC ${SOURCE_FILES} ${HEADER_FILES})
