change back to cpp 11 to build on CoCS

--- a/Assignment1/Question2/Utility/CMakeLists.txt
+++ b/Assignment1/Question2/Utility/CMakeLists.txt
@@ -2,11 +2,14 @@ project(Utility_lib)
 
 set(HEADER_FILES
         BytesOperation.h
-         Record.h
+        Record.h
+        HashTableBlock.h
         BlockListNode.h)
 
 set(SOURCE_FILES
         BytesOperation.cpp
-        Record.cpp BlockListNode.cpp)
+        HashTableBlock.cpp
+        Record.cpp
+        BlockListNode.cpp)
 
 add_library(Utility_lib STATIC ${SOURCE_FILES} ${HEADER_FILES})
