--- a/Assignment1/Question2/cmake-build-debug-cocs-remote-host/Question2.cbp
+++ b/Assignment1/Question2/cmake-build-debug-cocs-remote-host/Question2.cbp
@@ -5,7 +5,7 @@
 		<Option title="Question2"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
-		<Option virtualFolders="CMake Files\;CMake Files\FileParse\;CMake Files\Utility\;"/>
+		<Option virtualFolders="CMake Files\;"/>
 		<Build>
 			<Target title="all">
 				<Option working_dir="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host"/>
@@ -34,8 +34,6 @@
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/FileParse"/>
 					<Add directory="/usr/include/c++/8"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
 					<Add directory="/usr/include/c++/8/backward"/>
@@ -59,8 +57,6 @@
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/FileParse"/>
 					<Add directory="/usr/include/c++/8"/>
 					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
 					<Add directory="/usr/include/c++/8/backward"/>
@@ -87,140 +83,42 @@
 					<DistClean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
-			<Target title="Utility_lib">
-				<Option output="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/libUtility_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/usr/include/c++/8"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
-					<Add directory="/usr/include/c++/8/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 Utility_lib"/>
-					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="Utility_lib/fast">
-				<Option output="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/libUtility_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/usr/include/c++/8"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
-					<Add directory="/usr/include/c++/8/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 Utility_lib/fast"/>
-					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/Utility/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="FileParse_lib">
-				<Option output="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/libFileParse_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/FileParse"/>
-					<Add directory="/usr/include/c++/8"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
-					<Add directory="/usr/include/c++/8/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 FileParse_lib"/>
-					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="FileParse_lib/fast">
-				<Option output="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/libFileParse_lib.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse"/>
-				<Option object_output="./"/>
-				<Option type="2"/>
-				<Option compiler="gcc"/>
-				<Compiler>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/Utility"/>
-					<Add directory="/home/undergrad/2/ymei/workspace/A1-2/FileParse"/>
-					<Add directory="/usr/include/c++/8"/>
-					<Add directory="/usr/include/x86_64-linux-gnu/c++/8"/>
-					<Add directory="/usr/include/c++/8/backward"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include"/>
-					<Add directory="/usr/local/include"/>
-					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/8/include-fixed"/>
-					<Add directory="/usr/include/x86_64-linux-gnu"/>
-					<Add directory="/usr/include"/>
-				</Compiler>
-				<MakeCommands>
-					<Build command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 FileParse_lib/fast"/>
-					<CompileFile command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -j8 -f &quot;/home/undergrad/2/ymei/workspace/A1-2/cmake-build-debug-cocs-remote-host/FileParse/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
 		</Build>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/FileParse/ReadRawFile.cpp">
-			<Option target="FileParse_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/FileParse/ReadRawFile.h">
-			<Option target="FileParse_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/BlockListNode.cpp">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/BlockListNode.h">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/BytesOperation.cpp">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/BytesOperation.h">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
+		</Unit>
+		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/HashTableBlock.cpp">
+			<Option target="Question2"/>
+		</Unit>
+		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/HashTableBlock.h">
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/Record.cpp">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/Record.h">
-			<Option target="Utility_lib"/>
+			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/main.cpp">
 			<Option target="Question2"/>
 		</Unit>
 		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
-		</Unit>
-		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/FileParse/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\FileParse\"/>
-		</Unit>
-		<Unit filename="/home/undergrad/2/ymei/workspace/A1-2/Utility/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\Utility\"/>
 		</Unit>
 	</Project>
 </CodeBlocks_project_file>
