Able to start working on A2 now

--- a/Assignment2/.gitignore
+++ b/Assignment2/.gitignore
@@ -4,3 +4,8 @@
 ../KtxTest/
 .gradle
 build
+../SimpleJava/.gradle/
+../SimpleJava/build.gradle
+../SimpleJava/build/
+../SimpleJava/settings.gradle
+../SimpleJava/src/
