--- a/Assignment3/6030a3.yml
+++ b/Assignment3/6030a3.yml
@@ -3,9 +3,10 @@ channels:
   - defaults
 dependencies:
   - python=3.7
-  - psycopg2
+  - psycopg2-binary
   - pandas
   - sqlalchemy
   - scikit-learn
   - matplotlib
+  - prettytable
 prefix: /Users/Chris/opt/anaconda3/envs/CIS6030
